--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ html, body {
     margin: 0 auto;
     letter-spacing: 4px;
  
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Dosis', sans-serif;
 }
 
 .logo {
