--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,10 @@
 html, body{
     height: 100vh;
+    overflow: hidden;
     cursor: default;
-}
-
-html, body {
-    background-image: url(http://mikeldraws.com/img/fondo.jpg);*/
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover; 
+    text-rendering: optimizeLegibility;
+    
+    font-family: 'Gentium Basic', serif;
 }
 
 .container{
@@ -18,96 +15,46 @@ html, body {
     width: 70%;
     max-width: 50em;
     margin: 0 auto;
-    letter-spacing: 4px;
- 
-    font-family: 'Dosis', sans-serif;
-    font-weight: 600;
 }
 
-.logo {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 30px;
+.enlaces {
+    display:inline;
 }
 
-.all {
-    list-style: none;
-    color: black;
-    padding-left: 0px;
+a {
+    color: #f1c40f;
 }
 
-.content {
-    text-shadow: 0px 1px 2px rgba(0,0,0,0.16);
-    font-size: 25px;
+a:hover {
+    color: #f39c12;
 }
 
-.content a {
-    color: rgba(231, 76, 60,1.0);
+section {
+    display: block;
+    
+    font-size: 1.7em;
+    font-weight: 400;
+    line-height: 1.5em;       
 }
-
-.content a:hover {
-    color: rgba(231, 76, 60,.7);
-}
-
-.link {
-    margin-top: 30px;
-}
-
-.link img {
-	-webkit-filter: grayscale(100%);
-	filter: grayscale(100%);
-	-webkit-transition: .1s ease-in-out;
-	transition: .1s ease-in-out;
-}
-.link img:hover {
-	-webkit-filter: grayscale(0);
-	filter: grayscale(0);
-}
-
-
-/*
-.link img:hover {
-    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-    transform: translate3d(0, 0, 0);
-    backface-visibility: hidden;
-    perspective: 1000px;
-}
-
-@keyframes shake {
-  10%, 90% {
-    transform: rotate(-5deg);
-  }
-  
-  20%, 80% {
-    transform: rotate(7deg);
-  }
-
-  30%, 50%, 70% {
-    transform: rotate(-10deg);
-  }
-
-  40%, 60% {
-    transform: rotate(10deg);
-  }
-}*/
 
 @media (max-width: 460px) { 
+    
+    .enlaces {
+        text-align: center;
+        display: block;
+    }
         
     .content{
         margin: 10px;
+        font-size: 1.2em;
     }    
     
     .reel {
-        width: 500px;
+        width: 540px;
     }
     
     .link {
         padding-left: 10px;
     }
-	
-    .content {
-        text-shadow: 0px 1px 2px rgba(0,0,0,0.16);
-        font-size: 15px;
-}
     
     }
